# DSAN5400Proj

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml
assets/: model_results_rnn_doc2vec.txt  model_results_rnn_word2vec.txt  nb_classification_report.txt  nb_results_doc2vec.txt  nb_results_word2vec.txt  xgb_results.txt  xgb_results_doc2vec.txt  xgb_results_word2vec.txt
classifier/: vectorizer.py
classifier/eda/: __init__.py  vectorizer.py
classifier/ml/: models.ipynb  models.py  models_nb.ipynb
classifier/utils/: __init__.py  preprocess.py  utils.py
data/: test_cleaned.csv
docs/: conf.py  example.ipynb
preprocess/: med.py
src/: __init__.py  vectorizer.py
src/utils/: preprocess.py
tests/: test_classifier.py
tests/data/: test.csv
