[tool.poetry]
name = "dsan5400proj"
version = "0.1.0"
description = "In this project, we utilize a corpus of biomedical documents, specifically the abstracts from published papers. These documents describe five different classes of patient conditions such as neoplasms, digestive, nervous, cardiovascular, and pathological. The project carries out several Natural Language Processing practices such as vectorization (Word2Vec and Doc2Vec) and classification (via Naive Bayes, XGBoost, and Recurrent Neural Networks)."
authors = ["Eric Lim, Raunak Advani and Abhishek Dash"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"


[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^1.1.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
